# ES-Sim

./: .gitignore  README.md
backend/: es_sim_server.spec  pyproject.toml  run_server.py
backend/es_sim/: __init__.py  backend.py  dsmc.py  fem.py  fn.py  lxcat.py  mcc.py  meshing.py  particles.py  pic.py  postprocess.py  schema.py  server.py
backend/scripts/: bench_pic.py
backend/tests/: test_axisymmetric.py  test_bc_overlap.py  test_bfield.py  test_circle_shape.py  test_coax.py  test_continue.py  test_cycle.py  test_dielectric_see.py  test_dielectric_solid.py  test_divergence.py  test_dsmc.py  test_dual_freq.py  test_fem.py  test_fn.py  test_iedf.py  test_mcc.py  test_multi_collector.py  test_particles.py  test_pic.py  test_pic_fields.py  test_pic_rz.py  test_postprocess.py  test_rz_x0.py  test_structured_mesh.py  test_subcycle_threads.py  test_surface_charge.py  test_turner_prep.py
backend/tests/data/: synthetic_electron.txt  synthetic_ion.txt
backend/verification/: coax_convergence.py  coax_results.md  turner_case1.py  turner_case1_result.json  turner_case1_result.md
docs/: DSMC.md  PACKAGING.md  SPEC.md  VALIDATION.md  validation_report.html
examples/: ccp_demo.json  coaxial.json  egun_rz.json  fn_diode.json  parallel_plates.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
prompts/: 01_backend_line_profile.md  02_frontend_sketch_tools.md  03_frontend_visualization.md  04_frontend_move_undo.md  05_frontend_line_profile_ui.md  06_frontend_ux_fixes_grips.md  07_backend_coax_convergence.md  08_backend_circle_shape.md  (+58 more)
(+31 files in other folders)
