[project]
name = "es-sim"
version = "0.1.0"
description = "2D sketch CAD + electrostatic FEM / particle / PIC simulation backend"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "gmsh>=4.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]  # NVIDIA CUDA 12.x / Windows ネイティブ動作
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["es_sim*"]
